<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.shellmonger.relativelayoutexample.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/current_conditions_icon"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:contentDescription="@string/default_conditions"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:src="@drawable/snow-icon-14"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/current_conditions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/default_conditions"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/current_conditions_icon"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="18dp"
        android:paddingTop="12dp"
        android:text="@string/default_location"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/current_conditions_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="17°"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/low_temp_label"
        android:textColor="@android:color/white"
        android:id="@+id/textView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/min_temperature"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="15°"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toLeftOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/high_temp_label"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toLeftOf="@+id/max_temperature"
        app:layout_constraintLeft_toRightOf="@+id/min_temperature"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="18°"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/day1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:drawableBottom="@drawable/snow-icon-14"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_day1"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/day2_name"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <TextView
        android:id="@+id/day2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:drawableBottom="@drawable/snow-icon-14"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_day2"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/day1_name"
        app:layout_constraintRight_toLeftOf="@+id/day3_name"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <TextView
        android:id="@+id/day3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:drawableBottom="@drawable/snow-icon-14"
        android:fontFamily="sans-serif-light"
        android:text="@string/default_day3"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/day2_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/information"
        android:paddingEnd="6dp"
        android:paddingStart="6dp"
        android:src="@android:drawable/ic_menu_info_details"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
    <TextView
        android:id="@+id/switcher"
        android:text="@string/threedots"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/info_icon"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/add_button"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/add_location"
        android:paddingEnd="6dp"
        android:paddingStart="6dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="96dp" />
</android.support.constraint.ConstraintLayout>
